--- a/client/src/app/less/overview.less
+++ b/client/src/app/less/overview.less
@@ -2,6 +2,7 @@
     .usage {
         .cpu, .ram {
             background-color: @color-bg-light;
+            padding: 10px;
             .left {
                 height: 100px;
                 width: 100px;
@@ -22,5 +23,10 @@
             }
         }
     }
-    .containers {}
+    .containers {
+        .container{
+            background-color: #0f0;
+
+        }
+    }
 }
