--- a/client/src/app/less/main.less
+++ b/client/src/app/less/main.less
@@ -3,11 +3,13 @@
 
 body{
 	background: @color-bg-main;
+	padding-top: @app-header-height;
 }
 
 .container{
 	padding: 20px;
-	padding-top: @app-header-height + 20px;
+	margin: 20px;
+	background: #FFF;
 }
 
 
