--- a/client/src/app/tpls/public/header.tpl.html
+++ b/client/src/app/tpls/public/header.tpl.html
@@ -1,9 +1,9 @@
-<div class="ui top fixed menu app-header">
+<div class="ui top fixed menu app-header" ng-controller="headerCtrl">
     <div class="header item">
         Dockress
     </div>
-    <a ui-sref="overview" class="item"><i class="dashboard layout icon"></i> {{'overview'|translate}}</a>
-    <a ui-sref="containers" class="item"><i class="cubes  icon"></i> {{'containers'|translate}}</a>
-    <a ui-sref="images" class="item"><i class="database icon"></i> {{'images'|translate}}</a>
-    <a ui-sref="nodes" class="item"><i class="sitemap icon"></i> {{'nodes'|translate}}</a>
+    <a ui-sref="overview" class="item" ng-class="{active :isActive('^/$')}"><i class="dashboard layout icon"></i> {{'overview'|translate}}</a>
+    <a ui-sref="containers" class="item" ng-class="{active :isActive('/containers')}"><i class="cubes  icon"></i> {{'containers'|translate}}</a>
+    <a ui-sref="images" class="item" ng-class="{active :isActive('/images')}"><i class="database icon"></i> {{'images'|translate}}</a>
+    <a ui-sref="nodes" class="item" ng-class="{active :isActive('/nodes')}"><i class="sitemap icon"></i> {{'nodes'|translate}}</a>
 </div>
