--- a/client/src/app/tpls/public/header.tpl.html
+++ b/client/src/app/tpls/public/header.tpl.html
@@ -2,8 +2,9 @@
     <div class="header item">
         Dockress
     </div>
-    <a ui-sref="overview" class="item" ng-class="{active :isActive('^/$')}"><i class="dashboard layout icon"></i> {{'overview'|translate}}</a>
-    <a ui-sref="containers" class="item" ng-class="{active :isActive('/containers')}"><i class="cubes  icon"></i> {{'containers'|translate}}</a>
-    <a ui-sref="images" class="item" ng-class="{active :isActive('/images')}"><i class="database icon"></i> {{'images'|translate}}</a>
-    <a ui-sref="nodes" class="item" ng-class="{active :isActive('/nodes')}"><i class="sitemap icon"></i> {{'nodes'|translate}}</a>
+    <a ui-sref="overview" class="item" ng-class="{active :isActive('^/$')}"><i class="dashboard layout icon"></i> {{'header.overview'|translate}}</a>
+    <a ui-sref="containers" class="item" ng-class="{active :isActive('/containers')}"><i class="cubes  icon"></i> {{'header.containers'|translate}}</a>
+    <a ui-sref="images" class="item" ng-class="{active :isActive('/images')}"><i class="database icon"></i> {{'header.images'|translate}}</a>
+    <a ui-sref="registrys" class="item" ng-class="{active :isActive('/registrys')}"><i class="cloud icon"></i> {{'header.registrys'|translate}}</a>
+    <a ui-sref="nodes" class="item" ng-class="{active :isActive('/nodes')}"><i class="sitemap icon"></i> {{'header.nodes'|translate}}</a>
 </div>
