--- a/client/src/libs/iconfont/iconfont.css
+++ b/client/src/libs/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot'); /* IE9*/
-  src: url('iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1466496403'); /* IE9*/
+  src: url('iconfont.eot?t=1466496403#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1466496403') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1466496403') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1466496403#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,19 +15,5 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-about:before { content: "\e602"; }
-.icon-user:before { content: "\e604"; }
-.icon-exit:before { content: "\e605"; }
-.icon-picture:before { content: "\e600"; }
-.icon-yonghu01:before { content: "\e606"; }
-.icon-tuichu:before { content: "\e607"; }
-.icon-setup:before { content: "\e608"; }
-.icon-clipboard:before { content: "\e60d"; }
-.icon-list:before { content: "\e609"; }
-.icon-add:before { content: "\e60e"; }
-.icon-share:before { content: "\e601"; }
-.icon-explore:before { content: "\e60a"; }
-.icon-pin:before { content: "\e60b"; }
-.icon-pinun:before { content: "\e60c"; }
-.icon-theme:before { content: "\e603"; }
-.icon-edit:before { content: "\e610"; }
+.icon-trusted:before { content: "\e600"; }
+.icon-official:before { content: "\e601"; }
