--- a/client/src/app/tpls/public/header.tpl.html
+++ b/client/src/app/tpls/public/header.tpl.html
@@ -3,7 +3,7 @@
         Dockress
     </div>
     <a ui-sref="overview" class="item" ng-class="{active :isActive('^/$')}"><i class="dashboard layout icon"></i> {{'header.overview'|translate}}</a>
-    <a ui-sref="containers" class="item" ng-class="{active :isActive('/containers')}"><i class="cubes  icon"></i> {{'header.containers'|translate}}</a>
+    <a ui-sref="containers" class="item" ng-class="{active :isActive('/containers|/container')}"><i class="cubes  icon"></i> {{'header.containers'|translate}}</a>
     <a ui-sref="images" class="item" ng-class="{active :isActive('/images')}"><i class="database icon"></i> {{'header.images'|translate}}</a>
     <a ui-sref="registrys" class="item" ng-class="{active :isActive('/registrys')}"><i class="cloud icon"></i> {{'header.registrys'|translate}}</a>
     <a ui-sref="nodes" class="item" ng-class="{active :isActive('/nodes')}"><i class="sitemap icon"></i> {{'header.nodes'|translate}}</a>
