--- a/client/src/app/tpls/pages/container.tpl.html
+++ b/client/src/app/tpls/pages/container.tpl.html
@@ -1,6 +1,12 @@
 <div class="container text pages">
-    {{id}}
-
-    <div ng-term url="wsUrl"></div>
-
+    <div class="ui top attached tabular menu">
+        <a class="item active" data-tab="attach">Attach</a>
+        <a class="item" data-tab="exec">Exec</a>
+    </div>
+    <div class="ui bottom attached tab segment active" data-tab="attach">
+        <div ng-term url="attachUrl" start="attachStart"></div>
+    </div>
+    <div class="ui bottom attached tab segment" data-tab="exec">
+        <div ng-term url="execUrl" start="execStart"></div>
+    </div>
 </div>
