--- a/client/src/app/less/header.less
+++ b/client/src/app/less/header.less
@@ -1,6 +1,10 @@
-@app-header-height: 54px;
+@app-header-search-height: 4rem;
 
 .app-header{
-	background: #303039;
-	height: @app-header-height;
+	border-bottom: 1px solid #DDDDDD;
+	input.search{
+		border: none;
+		height: @app-header-search-height;
+		line-height: @app-header-search-height;
+	}
 }
