--- a/client/src/app/less/main.less
+++ b/client/src/app/less/main.less
@@ -1,38 +1,3 @@
-@color-bg-main:		 		#EEEEEE;
-@color-bg-light:		 	#F8FAFD;
-
-body{
-	background: @color-bg-main;
-	padding-top: @app-header-height;
+.app-main{
+	.flex-main;
 }
-
-.container{
-	padding: 20px;
-	margin: 20px;
-	background: #FFF;
-}
-
-
-
-//工具类
-.clearfix:before,
-.clearfix:after {
-    content: "";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-    /*IE/7/6*/
-}
-
-
-/**
- * 以下用于styles任务中进行注入
- */
-// injector
-// endinjector
