--- a/client/src/app/tpls/pages/containers.tpl.html
+++ b/client/src/app/tpls/pages/containers.tpl.html
@@ -1,5 +1,5 @@
-<div class="container text pages containers">
-    <table class="ui large table">
+<div class="app-containers">
+    <table class="ui table">
         <thead>
             <tr>
                 <th>ID</th>
