--- a/client/src/app/tpls/pages/container.tpl.html
+++ b/client/src/app/tpls/pages/container.tpl.html
@@ -1,12 +1,31 @@
-<div class="container text pages">
-    <div class="ui top attached tabular menu">
-        <a class="item active" data-tab="attach">Attach</a>
-        <a class="item" data-tab="exec">Exec</a>
+<div class="app-container">
+    <div class="head">
+        {{container.Name}}
     </div>
-    <div class="ui bottom attached tab segment active" data-tab="attach">
-        <div ng-term url="attachUrl" start="attachStart"></div>
+    <div class="overview">
+        <ul>
+            <li class="status">
+                {{container.State.Status}}
+            </li>
+            <li class="cpu">
+                {{stats.cpu_stats.cpu_usage.total_usage / stats.cpu_stats.system_cpu_usage}}
+            </li>
+            <li class="ram">
+                {{stats.memory_stats.usage | FileSize}} / {{stats.memory_stats.limit | FileSize}}
+            </li>
+
+        </ul>
     </div>
-    <div class="ui bottom attached tab segment" data-tab="exec">
-        <div ng-term url="execUrl" start="execStart"></div>
+    <div class="text pages">
+        <div class="ui top attached tabular menu">
+            <a class="item active" data-tab="attach">Attach</a>
+            <a class="item" data-tab="exec">Exec</a>
+        </div>
+        <div class="ui bottom attached tab segment active" data-tab="attach">
+            <div ng-term url="attachUrl" start="attachStart"></div>
+        </div>
+        <div class="ui bottom attached tab segment" data-tab="exec">
+            <div ng-term url="execUrl" start="execStart"></div>
+        </div>
     </div>
 </div>
