--- a/client/src/app/tpls/pages/images.tpl.html
+++ b/client/src/app/tpls/pages/images.tpl.html
@@ -19,7 +19,7 @@
         <tbody>
             <tr ng-repeat="image in images | orderBy:'Created'">
                 <td>
-                    {{image.Id | limitTo : 12}}
+                    {{image.Id | limitTo : 12 : 7}}
                 </td>
                 <td>
                     <div class="ui label">
