--- a/client/src/app/tpls/public/sidebar.tpl.html
+++ b/client/src/app/tpls/public/sidebar.tpl.html
@@ -4,8 +4,8 @@
     </div>
     <ul class="nav-vertical">
         <li class="item" ng-class="{active :isActive('^/$')}"><a ui-sref="overview"><i class="dashboard layout icon"></i> {{'header.overview'|translate}}</a></li>
-        <li class="item" ng-class="{active :isActive('/containers|/container')}"><a ui-sref="containers"><i class="cubes icon"></i> {{'header.containers'|translate}}</a></li>
-        <li class="item" ng-class="{active :isActive('/images')}"><a ui-sref="images"><i class="database icon"></i> {{'header.images'|translate}}</a></li>
+        <li class="item" ng-class="{active :isActive('/container')}"><a ui-sref="container"><i class="cubes icon"></i> {{'header.containers'|translate}}</a></li>
+        <li class="item" ng-class="{active :isActive('/image')}"><a ui-sref="image"><i class="database icon"></i> {{'header.images'|translate}}</a></li>
         <li class="item" ng-class="{active :isActive('/registrys')}"><a ui-sref="registrys"><i class="cloud icon"></i> {{'header.registrys'|translate}}</a></li>
         <li class="item" ng-class="{active :isActive('/nodes')}"><a ui-sref="nodes"><i class="sitemap icon"></i> {{'header.nodes'|translate}}</a></li>
     </ul>
