--- a/client/src/app/tpls/pages/image/list.tpl.html
+++ b/client/src/app/tpls/pages/image/list.tpl.html
@@ -14,6 +14,7 @@
                 <th>名称</th>
                 <th>创建时间</th>
                 <th>占用空间</th>
+                <th>操作</th>
             </tr>
         </thead>
         <tbody>
@@ -31,6 +32,11 @@
                 </td>
                 <td>
                     <span>{{image.VirtualSize | FileSize}}</span>
+                </td>
+                <td>
+                    <button  ui-sref="containerCreate({imageId: image.Id})" class="ui primary button">
+                        启动
+                    </button>
                 </td>
             </tr>
         </tbody>
