--- a/client/src/libs/iconfont/iconfont.css
+++ b/client/src/libs/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1466496403'); /* IE9*/
-  src: url('iconfont.eot?t=1466496403#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1466496403') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1466496403') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1466496403#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1471231831'); /* IE9*/
+  src: url('iconfont.eot?t=1471231831#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1471231831') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1471231831') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1471231831#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,5 +15,7 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
+.icon-error:before { content: "\e602"; }
+.icon-right:before { content: "\e603"; }
 .icon-trusted:before { content: "\e600"; }
 .icon-official:before { content: "\e601"; }
