--- a/client/src/app/tpls/pages/container/detail.tpl.html
+++ b/client/src/app/tpls/pages/container/detail.tpl.html
@@ -21,9 +21,11 @@
             </li>
             <li class="item net">
                 上行：{{stats.overview.networks_up_speed | FileSize:2:1000}} 下行：{{stats.overview.networks_down_speed | FileSize:2:1000}}
+                <highchart ng-if="stats.overview.networks_speed_chart" config="stats.overview.networks_speed_chart"></highchart>
             </li>
             <li class="item net-total">
                 上行吞吐量：{{stats.overview.networks_up | FileSize:2:1000}} 下行吞吐量：{{stats.overview.networks_down | FileSize:2:1000}}
+                <highchart ng-if="dchart" config="dchart"></highchart>
             </li>
         </ul>
     </div>
