--- a/client/src/app/less/cotainer-detail.less
+++ b/client/src/app/less/cotainer-detail.less
@@ -36,6 +36,9 @@
                     }
                 }
             }
+            &.net{
+                width: @app-container-detail-item-width*4 !important;
+            }
         }
         .chart-title {
             color: @app-container-detail-font-color-second;
