--- a/client/src/app/less/cotainer-detail.less
+++ b/client/src/app/less/cotainer-detail.less
@@ -2,9 +2,19 @@
 @app-container-detail-chart-title-height: 50px;
 @app-container-detail-font-color: #666;
 @app-container-detail-font-color-second: #AAA;
-
 .app-container-detail {
+    .head {
+        font-size: 2rem;
+        height: 40px;
+        line-height: 40px;
+        margin: 10px;
+        strong {
+            text-indent: 10px;
+        }
+    }
     .overview {
+        background: #FFF;
+        padding: 20px;
         .item {
             width: @app-container-detail-item-width;
             height: @app-container-detail-item-width;
@@ -27,17 +37,38 @@
                             color: red;
                         }
                         i {
-                        	font-weight: normal;
+                            font-weight: normal;
                             font-size: 2rem;
                         }
                     }
                     span {
-                    	color: @app-container-detail-font-color-second;
+                        color: @app-container-detail-font-color-second;
                     }
                 }
             }
-            &.net{
-                width: @app-container-detail-item-width*4 !important;
+            &.net {
+                width: @app-container-detail-item-width*2 !important;
+            }
+            &.net-total {
+                padding: @app-container-detail-item-width/10 10px;
+                div {
+                    div {
+                        text-align: center;
+                        height: @app-container-detail-item-width/3;
+                        p {
+                            font-size: 1.5rem;
+                            margin-bottom: 0;
+                            color: @app-container-detail-font-color;
+                            line-height: 1.5;
+                        }
+                        span {
+                            color: @app-container-detail-font-color-second;
+                        }
+                    }
+                    hr {
+                        margin: @app-container-detail-item-width/24 0;
+                    }
+                }
             }
         }
         .chart-title {
