--- a/client/src/app/tpls/pages/container/detail.tpl.html
+++ b/client/src/app/tpls/pages/container/detail.tpl.html
@@ -1,6 +1,6 @@
 <div class="app-container-detail">
     <div class="head">
-        {{container.Name}}
+        <i class="cubes icon"></i> <strong>{{container.Name}}</strong>
     </div>
     <div class="overview">
         <ul class="clearfix">
@@ -20,12 +20,20 @@
                 <highchart ng-if="stats.overview.memory_percent_chart" config="stats.overview.memory_percent_chart"></highchart>
             </li>
             <li class="item net">
-                上行：{{stats.overview.networks_up_speed | FileSize:2:1000}} 下行：{{stats.overview.networks_down_speed | FileSize:2:1000}}
                 <highchart ng-if="stats.overview.networks_speed_chart" config="stats.overview.networks_speed_chart"></highchart>
             </li>
             <li class="item net-total">
-                上行吞吐量：{{stats.overview.networks_up | FileSize:2:1000}} 下行吞吐量：{{stats.overview.networks_down | FileSize:2:1000}}
-                <highchart ng-if="dchart" config="dchart"></highchart>
+                <div ng-if="stats.overview.networks_down">
+                    <div>
+                        <p ng-bind-html="stats.overview.networks_down | FileSize:2:1000:true"></p>
+                        <span>网络吞吐 ( 接收 )</span>
+                    </div>
+                    <hr />
+                    <div>
+                        <p ng-bind-html="stats.overview.networks_up | FileSize:2:1000:true"></p>
+                        <span>网络吞吐 ( 发送 )</span>
+                    </div>              
+                </div>
             </li>
         </ul>
     </div>
