--- a/client/src/app/tpls/pages/image/list.tpl.html
+++ b/client/src/app/tpls/pages/image/list.tpl.html
@@ -20,7 +20,7 @@
         <tbody>
             <tr ng-repeat="image in images | orderBy:'Created'">
                 <td>
-                    {{image.Id | limitTo : 12 : 7}}
+                    {{image.Id}}
                 </td>
                 <td>
                     <div class="ui label">
